import enum


class Category(enum.Enum):
    FICTION = "fiction"
    NON_FICTION = "non-fiction"
