import enum


class Format(enum.Enum):
    EBOOK = "ebook"
    AUDIOBOOK = "audiobook"
    PAPERBACK = "paperback"
    HARDCOVER = "hardcover"
