import enum


class Genre(enum.Enum):
    FANTASY = "fantasy"
    SCIENCE_FICTION = "science fiction"
    DYSTOPIAN = "dystopian"
    ADVENTURE = "adventure"
    MYSTERY = "mystery"
    HORROR = "horror"
    SUSPENSE = "suspense"
    HISTORICAL_FICTION = "historical fiction"
    ROMANCE = "romance"
    WOMENS_FICTION = "womens fiction"
    LGBTQ = "lgbtq+"
    CONTEMPORARY_FICTION = "contemporary fiction"
    LITERARY_FICTION = "literary fiction"
    MAGICAL_REALISM = "magical realism"
    GRAPHIC_NOVEL = "graphic novel"
    SHORT_STORY = "short story"
    YOUNG_ADULT = "young adult"
    NEW_ADULT = "new adult"
    CHILDRENS = "childrens"
    MEMOIR = "memoir"
    BIOGRAPHY = "biography"
    FOOD = "food"
    ART = "art"
    SELF_HELP = "self-help"
    TRAVEL = "travel"
    HISTORY = "history"
    TRUE_CRIME = "true crime"
    HUMOR = "humor"
    ESSAYS = "essays"
    HOW_TO = "how to"
    SPIRITUALITY = "spirituality"
    PARENTING = "parenting"
    RELATIONSHIPS = "relationships"
    SCIENCE = "science"
    TECHNOLOGY = "technology"
    SOCIAL_SCIENCES = "social sciences"
