import enum


class ReadingMethod(enum.Enum):
    TECHNICAL = "technical"
    ABSORB = "absorb"
    FAMILIARIZE = "familiarize"
    LEISURE = "leisure"
