import enum


class Source(enum.Enum):
    LIBRARY = "library"
    OWN = "own"
    BORROWED = "borrowed"
